# del-pbrt

./: Cargo.toml
.github/workflows/: rust.yml
asset/cornell-box/: scene-v4.pbrt
asset/env_light/: PbrtRender.exr  env-light1.exr  scene-v4.pbrt
asset/material-testball/: PbrtRender.exr  scene-v4.pbrt
del-pbrt-candle/: Cargo.toml
del-pbrt-candle/src/: silhouette.rs
del-pbrt-cpu/: Cargo.toml
del-pbrt-cpu/examples/: 00_smallpt.rs  01_analytic_polygonal_light.rs  02_cornell_box.rs  03_material_test_ball.rs  04_env_light.rs  07_anti_aliasing.rs  08_veach_mis.rs
del-pbrt-cpu/src/: area_light.rs  lib.rs  parse_pbrt.rs  shape.rs
del-pbrt-cudarc/: Cargo.toml
del-pbrt-pbrt4-parser/: Cargo.toml
del-pbrt-pbrt4-parser/examples/: dump.rs
del-pbrt-pbrt4-parser/src/: scene.rs  types.rs
del-raycast-candle/: Cargo.toml
del-raycast-candle/src/: pix2depth.rs  render_meshtri2_vtxcolor.rs  silhouette.rs
del-raycast-core/: Cargo.toml
del-raycast-core/examples/: 01_analytic_polygonal_light.rs  02_cornell_box.rs  03_material_test_ball.rs  04_env_light.rs  05_trimesh3.rs  06_silhouette.rs  07_anti_aliasing.rs  08_veach_mis.rs
del-raycast-core/src/: raycast_trimesh3.rs  shape.rs  silhouette.rs
del-raycast-cudarc/: Cargo.toml
examples/: Cargo.toml
examples/examples/: 00_gl__fullscrntex.rs
