[workspace]
members = [
    "del-pbrt-cpu",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "hogehoge"
authors = ["Nobuyuki Umetani <n.umetani@gmail.com>"]
repository = "https://github.com/nobuyuki83/del-raycast/"
license = "MIT"

[workspace.dependencies]
nalgebra = "0.33.2"
rand = "0.9.0"
rand_chacha = "0.9.0"
num-traits = "0.2.19"
image = { version = "0.25.5", features = ["png"], default-features = false }
itertools = "0.14.0"
anyhow = "1.0.93"
ply-rs = "0.1.3"
arrayref = "0.3.9"
slice-of-array = "0.3.2"
rayon = "1.10.0"

# for development
# del-geo-core = { path = "../del-geo/del-geo-core" }
# del-msh-core = { path = "../del-msh/del-msh-core" }
# del-msh-candle = { path = "../del-msh/del-msh-candle" }
# del-msh-cudarc = {path="../del-msh/del-msh-cudarc"}
# del-fem-core = {path = "../del-fem/del-fem-core"}
# del-fem-ls = {path = "../del-fem/del-fem-ls"}
# del-fem-candle = { path = "../del-fem/del-fem-candle" }
# del-canvas = {path = "../del-canvas"}
# del-gl-core = { path = "../del-gl/del-gl-core"}
# del-gl-winit-glutin = { path = "../del-gl/del-gl-winit-glutin"}
# del-cudarc = {path="../del-cudarc"}
# pbrt4 = { path = "../pbrt4" }
# candle-core = { git="https://github.com/huggingface/candle.git" }

# for git push
del-geo-core = { git = "https://github.com/nobuyuki83/del-geo.git"}
del-msh-cpu = { git = "https://github.com/nobuyuki83/del-msh.git" }
del-canvas = {git="https://github.com/nobuyuki83/del-canvas.git"}
pbrt4 = { git = "https://github.com/nobuyuki83/pbrt4.git" }

# for deploy
# del-geo-core = "=0.1.33"
# del-geo-nalgebra = "=0.1.33"
# del-msh-core = "=0.1.37"
# del-msh-cudarc = "=0.1.39"
# del-msh-candle = "=0.1.39"
# del-fem-core = "=0.1.5"
# del-fem-ls = "=0.1.5"
# del-fem-candle = "=0.1.4"
# del-cudarc = "=0.1.2"
#candle-core = "=0.8.2"
# del-canvas = "=0.1.2"
# for deploy
