[workspace]
members = [
    "del-pbrt-cpu",
    "del-pbrt-pbrt4-parser"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
description = "hogehoge"
authors = ["Nobuyuki Umetani <n.umetani@gmail.com>"]
repository = "https://github.com/nobuyuki83/del-raycast/"
license = "MIT"

[workspace.dependencies]
nalgebra = "0.33.2"
rand = "0.9.0"
rand_chacha = "0.9.0"
num-traits = "0.2.19"
image = { version = "0.25.5", features = ["png", "exr"], default-features = false }
itertools = "0.14.0"
anyhow = "1.0.93"
ply-rs = "0.1.3"
arrayref = "0.3.9"
slice-of-array = "0.3.2"
rayon = "1.10.0"

# internal
del-pbrt-pbrt4-parser = {path="del-pbrt-pbrt4-parser"}

# for development
# del-geo-core = { path = "../del-geo/del-geo-core" }
# del-msh-core = { path = "../del-msh/del-msh-core" }
# del-canvas = {path = "../del-canvas"}

# for git push
del-geo-core = { git = "https://github.com/nobuyuki83/del-geo.git"}
del-msh-cpu = { git = "https://github.com/nobuyuki83/del-msh.git" }
del-canvas = {git="https://github.com/nobuyuki83/del-canvas.git"}

# for deploy
# del-geo-core = "=0.1.33"
# del-msh-core = "=0.1.37"
# del-canvas = "=0.1.2"
# for deploy
