[package]
name = "del-pbrt-cpu"
version.workspace = true
edition.workspace = true

[dependencies]
nalgebra.workspace = true
rand.workspace = true
rand_chacha.workspace = true
num-traits.workspace = true
image.workspace = true
itertools.workspace = true
anyhow.workspace = true
ply-rs.workspace = true
arrayref.workspace = true
slice-of-array.workspace = true
rayon.workspace = true


# for development
del-pbrt-pbrt4-parser.workspace = true
del-geo-core.workspace = true
del-msh-cpu.workspace = true
del-canvas.workspace = true

# for git push
# pbrt4 = { git = "https://github.com/nobuyuki83/pbrt4.git" }
